--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,10 @@ ul li {
   justify-content: space-around;
   padding: 20px;
 }
+ul li:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
 
 .navbar-brand img {
   width: 200px;
@@ -62,8 +66,31 @@ ul li {
   margin-top: 20px;
   flex-direction: column;
   align-items: center;
+  margin: auto;
+}
+
+.spin-section {
+  text-align: center;
 }
 
 .lootbox img {
   width: 350px;
+}
+
+.form-group input {
+  padding: 5px;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+.hide {
+  display: none;
+}
+.show {
+  display: block;
+}
+
+.loading {
+  border: 3px solid rgb(205, 166, 50);
+  border-radius: 5px;
 }
