--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,16 @@
 
 html {
   font-family: Poppins;
-  width: 100%;
   font-size: 16px;
   padding: 0;
+  height: 100%;
+}
+
+body {
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 1.5;
+  color: white;
   background-image: linear-gradient(
     to bottom,
     #000000,
@@ -21,20 +28,14 @@ html {
     #303e3d
   );
   background-repeat: no-repeat;
-}
-
-body {
-  font-size: 1em;
-  font-weight: 400;
-  line-height: 1.5;
-  color: white;
-  height: 100vh;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
-
   align-items: center;
   padding: 15px;
   margin: 0 auto;
@@ -58,6 +59,11 @@ ul li:hover {
   width: 200px;
   align-items: center;
   display: flex;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 .main-container {
@@ -111,6 +117,61 @@ ul li:hover {
 }
 
 .spin:hover {
+  border: 1px solid transparent;
+  color: rgb(252, 239, 0);
+  font-size: 18px;
+  cursor: pointer;
+  border: 2px solid #d2bdff;
+}
+
+/* .about {
+  width: 700px;
+  margin: 300px auto;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
+
+#config {
+  position: absolute;
+  top: 35%;
+  left: 10%;
+}
+
+#config-form {
+  display: flex;
+  margin: 0 auto;
+  width: auto;
+  flex-direction: column;
+}
+label,
+input {
+  display: block;
+  padding: 5px;
+}
+
+label {
+  margin-bottom: 10px;
+}
+
+.submit {
+  position: relative;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 4px;
+  color: rgb(140, 207, 40);
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  margin: 15px;
+  background-color: rgb(20, 24, 20);
+  border: 2px solid #d2bdff;
+  letter-spacing: 3px;
+}
+
+.submit:hover {
   border: 1px solid transparent;
   color: rgb(252, 239, 0);
   font-size: 18px;
